--- a/src/app/pages/userpage/userpage.html
+++ b/src/app/pages/userpage/userpage.html
@@ -8,8 +8,14 @@
 	</div>
 	<div class="row">
 		<div class="row">
-			<div class="col-lg-12">
+			<div class="col-lg-9">
 				<h2>{{user?.name}} <span *ngIf="user?.title">[{{user?.title}}]</span></h2>
+			</div>
+			<div class="col-lg-3">
+				<div id="social">
+		            <a *ngIf="user?.facebook" class="facebookBtn smGlobalBtn" href="http://facebook.com/{{user?.facebook}}" ></a>
+		            <a *ngIf="user?.twitter" class="twitterBtn smGlobalBtn" href="http://twitter.com/{{user?.twitter}}" ></a>
+		        </div>
 			</div>
 		</div>
 		<hr style="max-width:100%; width:100%;">
