--- a/src/global.css
+++ b/src/global.css
@@ -3,6 +3,8 @@
 @import url(https://fonts.googleapis.com/css?family=Questrial);
 @import url(http://fonts.googleapis.com/css?family=Dancing+Script:700);
 
+
+
 html,
 body {
     width: 100%;
@@ -234,7 +236,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('https://splashbase.s3.amazonaws.com/lifeofpix/regular/Life-of-Pix-free-stock-photos-Slate-Stone-Xeromatic-1440x953.jpg');
+    background-image: url('http://aqconnect.io/bg.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
