--- a/src/app/pages/content/content-details/location/location.html
+++ b/src/app/pages/content/content-details/location/location.html
@@ -83,7 +83,7 @@
 			<div class="col-lg-3" *ngIf="location?.dungeons.length > 0">
 				<div class="panel panel-info">
 					<div class="panel-heading panel-dungeon">
-						<h3 class="panel-title">Dungeons Found In</h3>
+						<h3 class="panel-title">Dungeons</h3>
 					</div>
 					<ul class="list-group">
 						<li *ngFor="let dungeon of location.dungeons" class="list-group-item"
